--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="dark_gray">#FF777777</color>
     <color name="theme_light_grey">#d9d9d9</color>
     <color name="theme_rich_black">#FF001A23</color>
+    <color name="ic_launcher_background">#FFFFFF</color>
 </resources>
