chore(ci): improve changelog generation and include app changes
Format changelog entries to omit type prefix and include commit links. Also includes pending app rebranding changes.

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="theme_light_grey">#d9d9d9</color>
     <color name="theme_rich_black">#FF001A23</color>
     <color name="ic_launcher_background">#FFFFFF</color>
+    <color name="ic_launcher_circle">#EEEEEE</color>
 </resources>
